netmaumau (0.20.2) UNRELEASED; urgency=low

  * improved seven rule

 -- Heiko Schäfer <heiko@rangun.de>  Wed, 03 Jun 2015 10:06:29 +0200

netmaumau (0.20.1) UNRELEASED; urgency=low

  * Fixed issue https://github.com/velnias75/NetMauMau/issues/33

 -- Heiko Schäfer <heiko@rangun.de>  Tue, 02 Jun 2015 16:27:37 +0200

netmaumau (0.20.0) UNRELEASED; urgency=low

  * unlimited amount of players
  * added bash completion for nmm-server
  * fixed suspend/no match bug

 -- Heiko Schäfer <heiko@rangun.de>  Sun, 31 May 2015 20:08:24 +0200

netmaumau (0.19.0) UNRELEASED; urgency=low

  * improved ace/king/queen rounds
  * fixed endless loop of AI under some circumstances

 -- Heiko Schäfer <heiko@rangun.de>  Fri, 22 May 2015 08:06:37 +0200

netmaumau (0.18.0) UNRELEASED; urgency=low

  * improved hard AI
  * added easy (entirely random playing) AI
  * many bugfixes

 -- Heiko Schäfer <heiko@rangun.de>  Sun, 03 May 2015 12:51:06 +0200

netmaumau (0.17.1) UNRELEASED; urgency=low

  * improved Lua returned type checking
  * better memory management
  * minor optimizations

 -- Heiko Schäfer <heiko@rangun.de>  Thu, 02 Apr 2015 12:39:35 +0200

netmaumau (0.17.0) UNRELEASED; urgency=low

  * open magic mime database once per session
  * using Lua script as rule set

 -- Heiko Schäfer <heiko@rangun.de>  Tue, 24 Mar 2015 06:24:43 +0100

netmaumau (0.16) UNRELEASED; urgency=low

  * improved AI
  * ran wrap-and-sort over debian/

 -- Heiko Schäfer <heiko@rangun.de>  Thu, 05 Mar 2015 12:09:20 +0100

netmaumau (0.15) UNRELEASED; urgency=low

  * amount of card decks configurable
  * amount of initial cards configurable
  * fix: clarified an untransparent move of a remote/ai player
  * fix: better handling of refused connections
  * improved a/k/q rounds and seven rule

 -- Heiko Schäfer <heiko@rangun.de>  Mon, 23 Feb 2015 07:11:11 +0100

netmaumau (0.14) UNRELEASED; urgency=low

  * fixed ai delay settings
  * improved AI
